--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
   ],
   "author": "saibotsivad",
   "license": "VOL",
-  "devDependencies": {
-    "ftp-validate-response": "^0.0.4",
-    "tape": "~3.0.3",
-    "extend": "~2.0.0"
-  },
   "dependencies": {
     "extend": "^2.0.0",
-    "promise": "^6.1.0",
-    "ftp-generate-response": "0.0.3"
+    "ftp-generate-response": "0.0.3",
+    "promise": "^7.0.4"
+  },
+  "devDependencies": {
+    "ftp-validate-response": "0.0.4",
+    "tape": "^4.2.0"
   }
 }
